--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -91,7 +91,7 @@ favicon: /img/123.png
 
 # Avatar (頭像)
 avatar:
-  img: https://c12th.gitee.io/img/01.gif
+  img: https://github.com/12thstan/js/blob/main/img/202203071633899.gif
   effect: false
 
 # the banner image of home page
