--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -73,7 +73,7 @@ local_search:
 
 # MathJax
 mathjax:
-  enable: true
+  enable: false
   per_page: false
   cdn: //cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
@@ -91,7 +91,7 @@ favicon: /img/123.png
 
 # Avatar (頭像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/12thstan/js@1.1.2/img/202203071633899.gif
+  img: https://npm.elemecdn.com/reverse-stu-allversions@1.0.0/img/202203071633899.gif
   effect: false
 
 # the banner image of home page
